react/src/common.css
.main_panel {
    position: relative;
    max-width: 80em;
    margin-left: auto;
    margin-right: auto;
}

.main_panel_mobile {
    padding-left: 1em;
    padding-right: 1em;
}

.left_panel {
    width: 20%;
    float: left;
}

.right_panel {
    width: 80%;
    padding-left: 2em;
}

.left_panel_top {
    display: flex;
    flex-direction: row;
    align-items: center;
    min-width: 20%;
}

.right_panel_top {
    flex-grow: 1;
    padding-left: 1em;
}

.content_panel_mobile {
    width: 100%;
}

.top_panel {
    position: relative;
    width: 100%;
    height: 3em;
    display: flex;
    align-items: center;
}

.body_panel {
    position: relative;
    width: 100%;
    display: flex;
}

.gap {
    margin-block-end: 2em;
}

.hgap {
    margin-inline-end: 1em;
}

.gap_small {
    margin-block-end: 0.7em;
}

.serif {
    font-family: 'Jost', 'Arial', sans-serif;
}

.centered_text {
    font-family: 'Jost', 'Arial', sans-serif;
    text-align: center;
}


.h1 {
    font-size: 1.5em;
}

.h2 {
    font-size: 1em;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

